[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/transicao.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/music.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/botoes/fechar.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/font1.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/botoes/botaoVerde.png" type="Texture" id=5]
[ext_resource path="res://assets/botoes/botaoLaranja.png" type="Texture" id=6]
[ext_resource path="res://assets/modal/modal4-big.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource/name = "fade"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorFrame:color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4, 0.6, 1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.890625, 0.438354, 0.438354, 1 ), Color( 0.229904, 0.964844, 0.258613, 1 ), Color( 0.105759, 0.545546, 0.933594, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=2]

resource/name = "modalAnimIn"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ModalPause:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.3, 0.5, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32, -733.088 ), Vector2( -32, 726.785 ), Vector2( -32, 1103.01 ), Vector2( -32, 475.662 ), Vector2( -32, 460 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/ModalPause:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.2, 0.3, 0.5, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.631865 ), Vector2( 1, 0.880362 ), Vector2( 1, 0.880362 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "modalAnimOut"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ModalPause:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32, 460 ), Vector2( -32, 597.952 ), Vector2( -32, -681.802 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "resume_game_track"
} ]
}

[node name="transition" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 1700.0
color = Color( 1, 1, 1, 0 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="BaseMusica" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = true
stream/volume_db = -5.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Popup" type="Popup" parent="Control"]

process/pause_mode = 2
visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
popup/exclusive = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Popup"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/modalAnimIn = SubResource( 2 )
anims/modalAnimOut = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ModalPause" type="Node2D" parent="Control/Popup/AnimationPlayer"]

transform/pos = Vector2( -32, -733.088 )

[node name="TouchScreenButton 2" type="TouchScreenButton" parent="Control/Popup/AnimationPlayer/ModalPause"]

transform/pos = Vector2( 769.362, 279.748 )
transform/scale = Vector2( 0.8, 0.8 )
z/z = 4
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="LabelButton" type="Node2D" parent="Control/Popup/AnimationPlayer/ModalPause"]

transform/pos = Vector2( 30.6846, 103.212 )
z/z = 4

[node name="Label" type="Label" parent="Control/Popup/AnimationPlayer/ModalPause/LabelButton"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = 311.0
margin/right = 575.0
margin/bottom = 385.0
custom_fonts/font = ExtResource( 4 )
text = "BTN_CONTINUAR"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonResumo" type="TouchScreenButton" parent="Control/Popup/AnimationPlayer/ModalPause"]

transform/pos = Vector2( 312.576, 397.667 )
transform/scale = Vector2( 1.26813, 1.27782 )
z/z = 3
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="ModalImg" type="Sprite" parent="Control/Popup/AnimationPlayer/ModalPause"]

transform/pos = Vector2( 219.408, 312.175 )
transform/scale = Vector2( 0.524118, 0.609017 )
z/z = 1
texture = ExtResource( 7 )
centered = false
modulate = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorFrame" type="ColorFrame" parent="Control/Popup"]

rect/min_size = Vector2( 1000, 1700 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 1700.0
color = Color( 0.105957, 0.43045, 0.847656, 0.748627 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="finished" from="Control/Popup/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="pressed" from="Control/Popup/AnimationPlayer/ModalPause/TouchScreenButton 2" to="." method="_on_TouchScreenButton_2_pressed"]

[connection signal="pressed" from="Control/Popup/AnimationPlayer/ModalPause/ButtonResumo" to="." method="_on_ButtonResumo_pressed"]


